--- a/test.html
+++ b/test.html
@@ -238,7 +238,7 @@
         <!-- Scrollreveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
         <!-- Music -->
-        <embed src="music.mp3" loop="true" autostart="true" width="2" height="0">
+        <!-- <embed src="music.mp3" loop="true" autostart="true" width="2" height="0"> -->
         <script src="script.js"></script>
     </body>
 </html>
