Moved scriipt.js and style.css to the assets folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../assets/style.css">
         <!-- Boxicon -->
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         
@@ -238,6 +238,6 @@
         <!-- Scrollreveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
        
-        <script src="script.js"></script>
+        <script src="../assets/script.js"></script>
     </body>
 </html>
