Added Form Spree

--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
-                    <form action="" class="contat__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="E-Mail" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <form action="http://formspree.io/xyyblven" method="POST" class="contat__form">
+                        <input type="text" name="name" placeholder="Name" class="contact__input">
+                        <input type="email" name="email" id="email" placeholder="E-Mail" class="contact__input">
+                        <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="button" value="Submit" class="contact__button button">
+                        <button type="submit" value="Submit" class="contact__button button">Submit</button>
                     </form>
                 </div>
             </section>
