Added more projects

--- a/index.html
+++ b/index.html
@@ -204,11 +204,28 @@
             <!-- Work -->
             <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
+                    <p class="section-description">Click the images to see these projects</p>
                 <div class="work__container bd-grid">
-                    <img src="./Images/password.jpg" alt="" class="project-item">
-                    <img src="./Images/quiz.jpg" alt="" class="project-item">
-                    <img src="./Images/digitalcoffee.jpg" alt="" class="project-item">
-                    <img src="./Images/scheduler.jpg" alt="" class="project-item">
+                    <div class="text font-weight-bold" id="title-name">1. Code Quiz<a href="https://ahnlok.github.io/code-quiz/">
+                        <img src="./Images/quiz.jpg" alt="" class="project-item">
+                    </a></div>
+                    
+                    <div class="text font-weight-bold" id="title-name">2. Digital Coffee<a href="https://ahnlok.github.io/digital-coffee/">
+                        <img alt="Project" class="project-item" src="./Images/digitalcoffee.jpg"> 
+                    </a></div>
+
+                    <div class="text font-weight-bold" id="title-name">3. Daily Scheduler<a href="https://ahnlok.github.io/daily-scheduler">
+                        <img src="./Images/scheduler.jpg" alt="" class="project-item">
+                    </a></div>
+
+                    <div class="text font-weight-bold" id="title-name">4. ReadMe Generator<a href="https://github.com/ahnlok/readme-generator">
+                        <img src="./Images/readme.gif" alt="" class="project-item">
+                    </a></div>
+
+                    <div class="text font-weight-bold" id="title-name">5. Team File Generator<a href="https://github.com/ahnlok/Team-Generator">
+                        <img src="./Images/oop.gif" alt="" class="project-item">
+                    </a></div>
+
                 </div>
             </section>
 
