--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@
             <!-- Resume -->
             <section class="skills section" id="resume">
                 <h2 class="section-title">Resume</h2>
-                <p class="font-weight-bold" id="resume"><a href="file:///C:/Users/ansun/Desktop/Resume_%20Sungpil%20An%20(Bootcamp).pdf">Sungpil An's Resume</a></p>
+                    <p class="section-description">Click the resume images to redirect </p>
+                <div class="center bd-grid">
+                    <div class="text font-weight-bold" id="title-name">1. Sungpil An's Resume<a href="file:///C:/Users/ansun/Desktop/Resume_%20Sungpil%20An%20(Bootcamp)%20(1).pdf">
+                        <img src="./Images/resumeimage.jpg" alt="" class="resume-image">
+                    </a></div>
+                </div>
             </section>
             <!-- Education -->
             <section class="skills section" id="education">
