--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                 </div>
             </nav>
         </header>
-
         <main class="l-main">
             <!-- Home -->
             <section class="home bd-grid" id="home">
@@ -58,9 +57,9 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="./Images/three.jpg" alt="me">
+                        <img src="./Images/profile.jpg" alt="me">
                     </div>
-                    
+
                     <div>
                         <h2 class="about__subtitle">Hello, I'm Sungpil</h2>
                         <p class="about__text">A former social media marketing & hospitality professional pursing to become an aspiring Front-End Developer</p>           
